--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -67,7 +67,8 @@ BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #
 #-- Specify a directory for package building.
 #BUILDDIR=/tmp/makepkg
-BUILDDIR=/sylph/BUILD_TEMP
+#BUILDDIR=/sylph/BUILD_TEMP
+BUILDDIR=/media/3tb1/apovis/PACKAGES/BUILD_TEMP
 
 #########################################################################
 # GLOBAL PACKAGE OPTIONS
@@ -111,15 +112,18 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 # Default: put built package and cached source in build directory
 #
 #-- Destination: specify a fixed directory where all packages will be placed
-PKGDEST=/sylph/new_pkgs.soeki
+#PKGDEST=/sylph/new_pkgs.soeki
+PKGDEST=/media/3tb1/apovis/PACKAGES/NEW_PKGs.soeki
 #-- Source cache: specify a fixed directory where source files will be cached
 #SRCDEST=/home/sources
+SRCDEST=/media/3tb1/apovis/PACKAGES/SRCs
 #-- Source packages: specify a fixed directory where all src packages will be placed
 #SRCPKGDEST=/home/srcpackages
 #-- Log files: specify a fixed directory where all log files will be placed
 #LOGDEST=/home/makepkglogs
 #-- Packager: name/email of the person or organization building packages
 #PACKAGER="John Doe <john@doe.com>"
+PACKAGER="Oleg Lusan <zero.universe@gmail.com>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
