--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -35,7 +35,7 @@ CHOST="x86_64-unknown-linux-gnu"
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 #CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse"
-CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -fomit-frame-pointer -mfpmath=sse -fpic -pie"
+ CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fpic -pie"
 #CFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
