--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -34,9 +34,7 @@ CHOST="x86_64-unknown-linux-gnu"
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-#CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse"
-CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie"
-#CFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse"
+CFLAGS="-march=x86-64 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
@@ -113,7 +111,7 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 #
 #-- Destination: specify a fixed directory where all packages will be placed
 #PKGDEST=/sylph/new_pkgs.soeki
-PKGDEST=/media/3tb1/apovis/PACKAGES/NEW_PKGs.soeki
+PKGDEST=/media/3tb1/apovis/PACKAGES/NEW_PKGs.generic
 #-- Source cache: specify a fixed directory where source files will be cached
 #SRCDEST=/home/sources
 SRCDEST=/media/3tb1/apovis/PACKAGES/SRCs
