--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -27,8 +27,8 @@ CARCH="x86_64"
 CHOST="x86_64-unknown-linux-gnu"
 
 #llvm
-#export CC=clang
-#export CXX=clang++
+export CC=clang
+export CXX=clang++
 
 #-- Compiler and Linker Flags
 # -march (or -mcpu) builds exclusively for an architecture
