--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -35,6 +35,7 @@ CHOST="x86_64-unknown-linux-gnu"
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
+#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
