--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -34,7 +34,8 @@ export CXX=clang++
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
+#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
+CFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
 CXXFLAGS="${CFLAGS}"
