--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -27,16 +27,16 @@ CARCH="x86_64"
 CHOST="x86_64-unknown-linux-gnu"
 
 #llvm
-#export CC=clang
-#export CXX=clang++
+export CC=clang
+export CXX=clang++
 
 #-- Compiler and Linker Flags
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
-#CFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
-CFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
+CFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
+#CFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
 CXXFLAGS="${CFLAGS}"
