added gcc6.1 opts

--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -34,14 +34,14 @@ CHOST="x86_64-unknown-linux-gnu"
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-#CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse"
-#CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie"
-CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto"
-#CFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto"
-#CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie"
-##CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC"
-#CFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse"
-CXXFLAGS="${CFLAGS}"
+#CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu11"
+#CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu11"
+CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu11"
+#CFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu11"
+#CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu11"
+##CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -std=gnu11"
+#CFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu11"
+CXXFLAGS="${CFLAGS} -std=gnu++14"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j9"
