--- a/makepkg-kvm.conf
+++ b/makepkg-kvm.conf
@@ -34,12 +34,12 @@ CHOST="x86_64-unknown-linux-gnu"
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
-#CFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
-#CFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
-#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
-#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
-CXXFLAGS="${CFLAGS}"
+CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu11"
+#CFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu11"
+#CFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu11"
+#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
+#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
+CXXFLAGS="${CFLAGS} -std=gnu++14"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j9"
