updated CHOST variable

--- a/makepkg-smichel.conf
+++ b/makepkg-smichel.conf
@@ -25,7 +25,8 @@ DLAGENTS=('ftp::/usr/bin/curl -fC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %
 #
 
 CARCH="i686"
-CHOST="i686-unknown-linux-gnu"
+#CHOST="i686-unknown-linux-gnu"
+CHOST="i686-pc-linux-gnu"
 
 #make clang your compiler
 #export CC=clang
