updated to grsec version 201605102138

--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -40,7 +40,14 @@ CFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 
 #CFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu11"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
-CXXFLAGS="${CFLAGS} -std=gnu++14"
+
+#CXXFLAGS="${CFLAGS} -std=gnu++14"
+#CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
+CXXFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
+#CXXFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
+#CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu++14"
+#CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu++14"
+
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j9"
