--- a/makepkg-smichel.conf
+++ b/makepkg-smichel.conf
@@ -36,14 +36,23 @@ CHOST="i686-pc-linux-gnu"
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-#CFLAGS="-march=x86-64 -mtune=generic -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto"
-#CFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -param=ssp-buffer-size=4"
-#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie"
-#CFLAGS="-O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -march=atom -mmmx -mno-3dnow -msse -msse2 -msse3 -mssse3 -mno-sse4a -mno-cx16 -msahf -mmovbe -mno-aes -mno-sha -mno-pclmul -mno-popcnt -mno-abm -mno-lwp -mno-fma -mno-fma4 -mno-xop -mno-bmi -mno-bmi2 -mno-tbm -mno-avx -mno-avx2 -mno-sse4.2 -mno-sse4.1 -mno-lzcnt -mno-rtm -mno-hle -mno-rdrnd -mno-f16c -mno-fsgsbase -mno-rdseed -mno-prfchw -mno-adx -mfxsr -mno-xsave -mno-xsaveopt -mno-avx512f -mno-avx512er -mno-avx512cd -mno-avx512pf -mno-prefetchwt1 -mno-clflushopt -mno-xsavec -mno-xsaves -mno-avx512dq -mno-avx512bw -mno-avx512vl -mno-avx512ifma -mno-avx512vbmi -mno-clwb -mno-pcommit -mno-mwaitx --param l1-cache-size=24 --param l1-cache-line-size=64 --param l2-cache-size=512"
-CFLAGS="-O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -march=atom --param l1-cache-size=24 --param l1-cache-line-size=64 --param l2-cache-size=512"
-#CFLAGS="-march=native -mtune=native -O3 -pipe -fstack-protector --param=ssp-buffer-size=4"
-#CFLAGS="-march=native -mtune=native -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
-CXXFLAGS="${CFLAGS}"
+#CFLAGS="-march=x86-64 -mtune=generic -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu11"
+#CFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -param=ssp-buffer-size=4 -std=gnu11"
+#CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
+#CFLAGS="-O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -march=atom -mmmx -mno-3dnow -msse -msse2 -msse3 -mssse3 -mno-sse4a -mno-cx16 -msahf -mmovbe -mno-aes -mno-sha -mno-pclmul -mno-popcnt -mno-abm -mno-lwp -mno-fma -mno-fma4 -mno-xop -mno-bmi -mno-bmi2 -mno-tbm -mno-avx -mno-avx2 -mno-sse4.2 -mno-sse4.1 -mno-lzcnt -mno-rtm -mno-hle -mno-rdrnd -mno-f16c -mno-fsgsbase -mno-rdseed -mno-prfchw -mno-adx -mfxsr -mno-xsave -mno-xsaveopt -mno-avx512f -mno-avx512er -mno-avx512cd -mno-avx512pf -mno-prefetchwt1 -mno-clflushopt -mno-xsavec -mno-xsaves -mno-avx512dq -mno-avx512bw -mno-avx512vl -mno-avx512ifma -mno-avx512vbmi -mno-clwb -mno-pcommit -mno-mwaitx --param l1-cache-size=24 --param l1-cache-line-size=64 --param l2-cache-size=512 -std=gnu11"
+CFLAGS="-O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -march=atom --param l1-cache-size=24 --param l1-cache-line-size=64 --param l2-cache-size=512 -std=gnu11"
+#CFLAGS="-march=native -mtune=native -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -std=gnu11"
+#CFLAGS="-march=native -mtune=native -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -std=gnu11"
+
+#CXXFLAGS="${CFLAGS}"
+#CXXFLAGS="-march=x86-64 -mtune=generic -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
+#CXXFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -param=ssp-buffer-size=4 -std=gnu++14"
+#CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu++14"
+#CXXFLAGS="-O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -march=atom -mmmx -mno-3dnow -msse -msse2 -msse3 -mssse3 -mno-sse4a -mno-cx16 -msahf -mmovbe -mno-aes -mno-sha -mno-pclmul -mno-popcnt -mno-abm -mno-lwp -mno-fma -mno-fma4 -mno-xop -mno-bmi -mno-bmi2 -mno-tbm -mno-avx -mno-avx2 -mno-sse4.2 -mno-sse4.1 -mno-lzcnt -mno-rtm -mno-hle -mno-rdrnd -mno-f16c -mno-fsgsbase -mno-rdseed -mno-prfchw -mno-adx -mfxsr -mno-xsave -mno-xsaveopt -mno-avx512f -mno-avx512er -mno-avx512cd -mno-avx512pf -mno-prefetchwt1 -mno-clflushopt -mno-xsavec -mno-xsaves -mno-avx512dq -mno-avx512bw -mno-avx512vl -mno-avx512ifma -mno-avx512vbmi -mno-clwb -mno-pcommit -mno-mwaitx --param l1-cache-size=24 --param l1-cache-line-size=64 --param l2-cache-size=512 -std=gnu++14"
+CXXFLAGS="-O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -march=atom --param l1-cache-size=24 --param l1-cache-line-size=64 --param l2-cache-size=512 -std=gnu++14"
+#CXXFLAGS="-march=native -mtune=native -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -std=gnu++14"
+#CXXFLAGS="-march=native -mtune=native -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -std=gnu++14"
+
 LDFLAGS="-Wl,-rpath -Wl,-O1,--sort-common,--as-needed,-z,relro,-LLIBDIR"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j4"
