--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -42,7 +42,17 @@ CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -m
 #CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu11"
 ##CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -std=gnu11"
 #CFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu11"
-CXXFLAGS="${CFLAGS} -std=gnu++14"
+
+#CXXFLAGS="${CFLAGS} -std=gnu++14"
+#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu++14"
+#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu++14"
+CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu++14"
+#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu++14"
+#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu++14"
+#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -std=gnu++14"
+#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu++14"
+
+
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j9"
