--- a/makepkg-smichel.conf
+++ b/makepkg-smichel.conf
@@ -138,7 +138,11 @@ LOGDEST=/home/celine/PACKAGES/makepkglogs
 #-- Packager: name/email of the person or organization building packages
 #PACKAGER="John Doe <john@doe.com>"
 #-- Specify a key to use for package signing
-#GPGKEY=""
+# edd25519
+GPGKEY="23008F63"
+
+# rsa
+#GPGKEY="4F426E91"
 
 #########################################################################
 # COMPRESSION DEFAULTS
