--- a/makepkg-kvm.conf
+++ b/makepkg-kvm.conf
@@ -135,7 +135,11 @@ SRCDEST=/media/3tb1/apovis/PACKAGES/SRCs
 #PACKAGER="John Doe <john@doe.com>"
 PACKAGER="Oleg Lusan <zero.universe@gmail.com>"
 #-- Specify a key to use for package signing
-#GPGKEY=""
+# edd25519
+GPGKEY="23008F63"
+
+# rsa
+#GPGKEY="4F426E91"
 
 #########################################################################
 # COMPRESSION DEFAULTS
