--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -37,7 +37,7 @@ CHOST="x86_64-pc-linux-gnu"
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 #CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=c17"
 #CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=c17"
-CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=c17"
+CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu11"
 #CFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=c17"
 #CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=c17"
 ##CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -std=c17"
@@ -46,7 +46,7 @@ CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -m
 #CXXFLAGS="${CFLAGS} -std=gnu++17"
 #CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu++17"
 #CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu++17"
-CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu++17"
+CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu++14"
 #CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu++17"
 #CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu++17"
 #CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -std=gnu++17"
