--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -28,8 +28,8 @@ CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"
 
 #llvm
-#export CC=clang
-#export CXX=clang++
+export CC=clang
+export CXX=clang++
 
 #-- Compiler and Linker Flags
 # -march (or -mcpu) builds exclusively for an architecture
@@ -37,20 +37,20 @@ CHOST="x86_64-pc-linux-gnu"
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 #CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu11"
 #CFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu11"
-CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu11"
-#CFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu11"
-#CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu11"
-##CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -std=gnu11"
-#CFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu11"
+CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -lto -std=gnu11"
+#CFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -fno-plt -std=gnu11"
+#CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -std=gnu11"
+##CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -fno-plt -std=gnu11"
+#CFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fno-plt -fno-plt -std=gnu11"
 
-#CXXFLAGS="${CFLAGS} -std=gnu++14"
-#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu++14"
-#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu++14"
-CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=c++17"
-#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -std=gnu++14"
-#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -std=gnu++14"
-#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -std=gnu++14"
-#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -std=gnu++14"
+#CXXFLAGS="${CFLAGS} -fno-plt -std=gnu++14"
+#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fno-plt -std=gnu++14"
+#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -std=gnu++14"
+CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -lto -std=c++17"
+#CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -fno-plt -std=gnu++14"
+#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -std=gnu++14"
+#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -fno-plt -std=gnu++14"
+#CXXFLAGS="-march=atom -O3 -pipe -fstack-protector --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fno-plt -std=gnu++14"
 
 
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
