--- a/makepkg-kvm.conf
+++ b/makepkg-kvm.conf
@@ -123,7 +123,7 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 #
 #-- Destination: specify a fixed directory where all packages will be placed
 #PKGDEST=/sylph/new_pkgs.soeki
-PKGDEST=/raid5/celine/PACKAGES/NEW_PKGs
+PKGDEST=/raid5/celine/PACKAGES/NEW_PKGs.kvm
 #-- Source cache: specify a fixed directory where source files will be cached
 #SRCDEST=/home/sources
 SRCDEST=/raid5/celine/PACKAGES/SRCs
