--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -35,14 +35,14 @@ export CXX=clang++
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-CFLAGS="-march=x86-64 -mtune=generic -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -fno-plt -std=gnu11"
+CFLAGS="-march=x86-64 -mtune=generic -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -fno-plt -std=gnu11 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
 #CFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu11"
 #CFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu11"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
 
 #CXXFLAGS="${CFLAGS} -std=gnu++14"
-CXXFLAGS="-march=x86-64 -mtune=generic -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -fno-plt -std=gnu++14"
+CXXFLAGS="-march=x86-64 -mtune=generic -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -fno-plt -std=gnu++17 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
 #CXXFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
 #CXXFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
 #CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu++14"
