--- a/makepkg-barch.conf
+++ b/makepkg-barch.conf
@@ -37,7 +37,7 @@ export CXX=clang++
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 #CFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -std=gnu11"
 #CFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -std=gnu11"
-CFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu11"
+CFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu11 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
 #CFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -lto -fno-plt -std=gnu11"
 #CFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu11"
 ##CFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIC -fno-plt -std=gnu11"
@@ -46,7 +46,7 @@ CFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=
 #CXXFLAGS="${CFLAGS} -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu++14"
-CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=c++17"
+CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu++17 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
 #CXXFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -lto -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIC -fno-plt -std=gnu++14"
