updated to 4.17.0 and adjusted compiling flags

--- a/makepkg-barch.conf
+++ b/makepkg-barch.conf
@@ -46,7 +46,7 @@ CFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=
 #CXXFLAGS="${CFLAGS} -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu++14"
-CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu++17 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
+CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu++14 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
 #CXXFLAGS="-march=amdfam10 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -lto -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -msse4a -msahf -fomit-frame-pointer -fPIC -fno-plt -std=gnu++14"
@@ -55,7 +55,7 @@ CXXFLAGS="-march=amdfam10 -O3 -pipe -fstack-protector-all --param=ssp-buffer-siz
 
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
-MAKEFLAGS="-j9"
+MAKEFLAGS="-j$(nproc)"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
