--- a/makepkg-kvm.conf
+++ b/makepkg-kvm.conf
@@ -42,7 +42,7 @@ CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 
 #CFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu11"
 
 #CXXFLAGS="${CFLAGS} -std=gnu++14"
-CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++17 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
+CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
 #CXXFLAGS="-march=corei7 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
 #CXXFLAGS="-march=corei7 -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -lto -std=gnu++14"
 #CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fPIE -pie -std=gnu++14"
@@ -50,7 +50,7 @@ CXXFLAGS="-march=x86-64 -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=
 
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
-MAKEFLAGS="-j9"
+MAKEFLAGS="-j$(nproc)"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
