--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -46,7 +46,7 @@ CFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -m
 #CXXFLAGS="${CFLAGS} -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -std=gnu++14"
-CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -lto -std=c++17 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
+CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -lto -std=gnu++14 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
 #CXXFLAGS="-march=atom -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -lto -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIE -pie -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -mmmx -msse -msse2 -msse3 -mssse3 -mcx16 -mmovbe -msahf -fomit-frame-pointer -mfpmath=sse -fPIC -fno-plt -std=gnu++14"
@@ -55,7 +55,7 @@ CXXFLAGS="-march=atom -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 
 
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
-MAKEFLAGS="-j9"
+MAKEFLAGS="-j$(nproc)"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
