updated to 4.17.11 and adjusted build-flags

--- a/makepkg-barch.conf
+++ b/makepkg-barch.conf
@@ -57,8 +57,10 @@ LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j$(nproc)"
 #-- Debugging flags
-DEBUG_CFLAGS="-g -fvar-tracking-assignments"
-DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
+#DEBUG_CFLAGS="-g -fvar-tracking-assignments"
+#DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
+DEBUG_CFLAGS="-g"
+DEBUG_CXXFLAGS="-g"
 
 #########################################################################
 # BUILD ENVIRONMENT
@@ -83,7 +85,8 @@ BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #-- Specify a directory for package building.
 #BUILDDIR=/tmp/makepkg
 #BUILDDIR=/sylph/BUILD_TEMP
-BUILDDIR=/media/1tb1/apovis/PACKAGES/BUILD_TEMP
+#BUILDDIR=/media/1tb1/apovis/PACKAGES/BUILD_TEMP
+BUILDDIR=/tmp_builds
 
 #########################################################################
 # GLOBAL PACKAGE OPTIONS
