--- a/makepkg-barch.conf
+++ b/makepkg-barch.conf
@@ -83,10 +83,8 @@ BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #DISTCC_HOSTS=""
 #
 #-- Specify a directory for package building.
-#BUILDDIR=/tmp/makepkg
-#BUILDDIR=/sylph/BUILD_TEMP
-#BUILDDIR=/media/1tb1/apovis/PACKAGES/BUILD_TEMP
-BUILDDIR=/tmp_builds
+BUILDDIR=/media/1tb1/apovis/PACKAGES/BUILD_TEMP
+#BUILDDIR=/tmp_builds
 
 #########################################################################
 # GLOBAL PACKAGE OPTIONS
