--- a/makepkg-soeki.conf
+++ b/makepkg-soeki.conf
@@ -83,10 +83,8 @@ BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #DISTCC_HOSTS=""
 #
 #-- Specify a directory for package building.
-#BUILDDIR=/tmp/makepkg
-#BUILDDIR=/sylph/BUILD_TEMP
-#BUILDDIR=/media/1tb1/apovis/PACKAGES/BUILD_TEMP
-BUILDDIR=/tmp_builds
+BUILDDIR=/media/1tb1/apovis/PACKAGES/BUILD_TEMP
+#BUILDDIR=/tmp_builds
 
 #########################################################################
 # GLOBAL PACKAGE OPTIONS
@@ -155,8 +153,8 @@ GPGKEY="23008F63"
 #
 COMPRESSGZ=(gzip -c -f -n)
 COMPRESSBZ2=(bzip2 -c -f)
-COMPRESSXZ=(xz -c -z - --threads=0)
-#COMPRESSXZ=(7z a dummy -txz -si -so)
+#COMPRESSXZ=(xz -c -z - --threads=0)
+COMPRESSXZ=(7z a dummy -txz -si -so)
 COMPRESSLRZ=(lrzip -q)
 COMPRESSLZO=(lzop -q)
 COMPRESSZ=(compress -c -f)
