--- a/makepkg-kvm.conf
+++ b/makepkg-kvm.conf
@@ -78,7 +78,8 @@ BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #-- Specify a directory for package building.
 #BUILDDIR=/tmp/makepkg
 #BUILDDIR=/sylph/BUILD_TEMP
-BUILDDIR=/raid5/celine/PACKAGES/BUILD_TEMP/
+#BUILDDIR=/raid5/celine/PACKAGES/BUILD_TEMP/
+BUILDDIR=/PACKAGES/BUILD_TEMP/
 
 #########################################################################
 # GLOBAL PACKAGE OPTIONS
@@ -123,20 +124,24 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 #
 #-- Destination: specify a fixed directory where all packages will be placed
 #PKGDEST=/sylph/new_pkgs.soeki
-PKGDEST=/raid5/celine/PACKAGES/NEW_PKGs.kvm
+#PKGDEST=/raid5/celine/PACKAGES/NEW_PKGs.kvm
+PKGDEST=/PACKAGES/NEW_PKGs.kvm
 #-- Source cache: specify a fixed directory where source files will be cached
 #SRCDEST=/home/sources
-SRCDEST=/raid5/celine/PACKAGES/SRCs
+#SRCDEST=/media/1tb1/apovis/PACKAGES/SRCs
+SRCDEST=/PACKAGES/SRCs
 #-- Source packages: specify a fixed directory where all src packages will be placed
-#SRCPKGDEST=/home/srcpackages
+#SRCPKGDEST=/media/1tb1/apovis/PACKAGES/SRCPKGs
+SRCPKGDEST=/PACKAGES/SRCPKGs
 #-- Log files: specify a fixed directory where all log files will be placed
 #LOGDEST=/home/makepkglogs
 #-- Packager: name/email of the person or organization building packages
 #PACKAGER="John Doe <john@doe.com>"
-PACKAGER="Oleg Lusan <zero.universe@gmail.com>"
+PACKAGER="Oleg Lusan <apovis@grafmurr.de>"
 #-- Specify a key to use for package signing
 # edd25519
-GPGKEY="23008F63"
+#GPGKEY="23008F63"
+GPGKEY="ECEBE42540234C8A97D100465DAC147E23008F63"
 
 # rsa
 #GPGKEY="4F426E91"
