some compiler changes for x230

--- a/makepkg-x230.conf
+++ b/makepkg-x230.conf
@@ -37,7 +37,8 @@ export CXX=clang++
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 #CFLAGS="-march=ivybridge -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -fomit-frame-pointer -std=gnu11"
 #CFLAGS="-march=ivybridge -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -std=gnu11"
-CFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu11 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
+###CFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu11 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
+CFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu11"
 #CFLAGS="-march=ivybridge -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -lto -fno-plt -std=gnu11"
 #CFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu11"
 ##CFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIC -fno-plt -std=gnu11"
@@ -46,7 +47,8 @@ CFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size
 #CXXFLAGS="${CFLAGS} -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=ivybridge -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -fomit-frame-pointer -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=ivybridge -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu++14"
-CXXFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu++14 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
+###CXXFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu++14 -fstack-clash-protection -mindirect-branch=thunk -mno-indirect-branch-register"
+CXXFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -lto -std=gnu++14"
 #CXXFLAGS="-march=ivybridge -O2 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -lto -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIE -pie -fno-plt -std=gnu++14"
 #CXXFLAGS="-march=ivybridge -O3 -pipe -fstack-protector-all --param=ssp-buffer-size=4 -fomit-frame-pointer -fPIC -fno-plt -std=gnu++14"
